# XwinTox

./: .gitattributes  .gitignore  CMakeLists.txt  CPYRIGHT  Config.kmk  Makefile  Makefile.cfg  Makefile.kmk  Makefile.mk  Makefile.plt  README.md  XwinTox.workspace  cmrun.sh  configure  run.sh
Kmk/: OBJC.kmk
doc/: Forth.MD
forthobj/: CMakeLists.txt  FORTHOBJ.cc  FORTHOBJ.h  dictionary.c  extras.c  ficl.h  float.c  forthobj.project  main.c  modFOBJ.cc  prefix.c  tools.c  utility.c  vm.c
forthobj/softcore/: mksoftcore.c  xwintox.4th
gui_fltk/: CMakeLists.txt  GFLTK_CB.cc  GFLT_CB.cc  GFL_FILE.cc  GFL_FILE.h  GUIFLTK.cc  GUIFLTK.h  GUI_FLTK.cc  Makefile  Makefile.kmk  gui_fltk.project  modGFLTK.cc  util.cc  util.h
gui_fltk/control/: cntctent.cc  cntctent.h  cntctlst.cc  cntctlst.h  frequest.cc  frequest.h  gaddfrnd.cc  gaddfrnd.h  garea.cc  garea.h  gsetting.cc  gsetting.h  gtrnsfer.cc  gtrnsfer.h  msgarea.cc  msgarea.h  sbarbtm.cc  sbarbtm.h  sbartop.cc  sbartop.h  sidebar.cc  sidebar.h  sr_table.cc  sr_table.h  statbox.cc  statbox.h  svgbox.cc  svgbox.h  transent.cc  transent.h  translst.cc  translst.h  xwin.cc  xwin.h
gui_fltk/nanosvg/: nanosvgrast.h  nsvgwrap.c  nsvgwrap.cc  nsvgwrap.h  res.cc  svgs.h
imcomm_tox/: IMCommTox.c  IMCommTox.h  MCommTox.c  Makefile  Makefile.kmk  imcomm_tox.c  imcomm_tox.project  mcomm_tox.c  mctfuncs.c  mctfuncs.h
lib/: class.fst  error.fst  kernel.fst
libsunshine/: CMakeLists.txt  Makefile  Makefile.kmk  dictionary.c  hexstring.c  libsunshine.project  linkme.mk  list.c  misc.c  postbox.c
libsunshine/hdr/: dictionary.h  hexstring.h  list.h  misc.h  postbox.h  sptr.h
libsunshine/ini/: ini.h
libsunshine_src/: CPYRIGHT  Makefile  dictionary.c  hexstring.c  list.c  misc.c
libsunshine_src/hdr/: dictionary.h  list.h  misc.h
libsunshine_src/ini/: ini.c
mcom_tox/: CMakeLists.txt  MCOMMTOX.c  MCOMMTOX.cc  MCOMMTOX.h  MCOM_TOX.c  MCT_CB.cc  MCT_SIG.cc  Makefile.kmk  callback.c  callback.h  mcom_tox.project  mctfuncs.c  mctfuncs.h  modMCT.cc
mcom_tox/toxdns3/: TOXDNS3.cc  TOXDNS3.h
mk/: c11thread.mk  c11threads.mk  fltk.mk
src/: Makefile.kmk  tmp.m
toxaemia_src/: Makefile  Toxaemia.project  toxaemia.c  toxaemia.x  toxaemia_funcs.c  toxaemia_tox_callbacks.c  toxaemia_util.c  toxaemia_util.h
toxaemia_src/evserv/: evserv.c  evserv.h
toxaemia_src/hdr/: toxaemia_core.h
toxaemia_src/xdrserv/: evserv.c  evserv.h  fileserv.c  fileserv.h  xdrserv.c  xdrserv.h
toxdns3/: CMakeLists.txt  Makefile.kmk  TOXDNS3.cc  TOXDNS3.h  modTOX3.cc  toxdns3.project
xwintox/: CMakeLists.txt  Makefile  Makefile.kmk  linkme.mk  xwintox.c  xwintox.project  xwt.h
xwintox/Module/: Manager.c  Manager.h
xwintox/fastobj/: CMakeLists.txt  FASTOBJ.cxx  FASTOBJ.h  Makefile.kmk  binop.cxx  main.cxx  modFOBJ.cxx  modFOBJ.h  operator.cxx  vm.cxx  xwfmisc.cxx  xwforth.h  xwfplatf.hin  xwfvm.h  xwfword.h  xwinfast.l
xwintox/fastobj/word/: array.cxx  dict.cxx  integer.cxx  lambda.cxx  name.cxx  real.cxx  string.cxx
xwintox/forthobj/: CMakeLists.txt  FORTHOBJ.cc  FORTHOBJ.h  Makefile.kmk  dictionary.c  extras.c  ficl.h  ficltokens.h  fileaccess.c  float.c  forthobj.project  hash.c  main.c  modFOBJ.cc  modFOBJ.h  prefix.c  primitives.c  search.c  stack.c  system.c  tools.c  utility.c  vm.c  word.c
xwintox/forthobj/softcore/: ficl.fr  jhlocal.fr  mksoftcore.c  oo.fr  xwintox.4th
xwintox/hdr/: xwintox.h
xwintox/hdr/AOM/: IGUI.h  IGUICxx.h  IMComm.h  IXWClass.h
xwintox/hdr/Module/: Module.h
xwintox/luaobj/: CMakeLists.txt  modLOBJ.cxx  modLOBJ.h
xwintox/module/: manager.c  manager.h
xwintox_src/: Makefile  XwinTox.project  postbox.c  postbox.h  xwintox.h
xwintox_src/c/: etc.c  etc.h  main.c  postbox.c  signal.h  xwintox.h
xwintox_src/cc/: contacts.cc  contacts.h  cxxmain.cc  cxxmain.d  res.cc  signal.h  svgs.h  win.cc  win2.cc  xwintox_win.cc  xwintox_win.h
xwintox_src/comm/: comm.h  etc.h  main.c  postbox.d
xwintox_src/control/: cntctent.cc  cntctent.h  cntctlst.cc  cntctlst.h  frequest.cc  frequest.h  gaddfrnd.cc  garea.cc  gtrnsfer.cc  gtrnsfer.h  gui.cc  gui.h  msgarea.cc  msgarea.h  sbarbtm.cc  sbartop.cc  sidebar.cc  sidebar.h  statbox.cc  svgbox.h  transent.cc  transent.h  translst.cc
xwintox_src/evcomm/: evcomm.c  evcomm.h
xwintox_src/nanosvg/: nanosvgrast.h  nsvgwrap.h  nsvgwrapper.c
xwintox_src/resolv/: dresolv.h  toxdns.c
xwintox_src/xdrcomm/: xdrcomm.c  xdrcomm.h
xwintox_src/xwin/: contacts.cc  contacts.h  cxxmain.cc  win2.cc
